2022-01-13 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Reduce recursion depth to fit into mcs51 stack.

2022-01-12 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/main.c:
      Fix library names.

2022-01-12 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/reentrant.c:
      Add reentrant function regression test.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-990128-1 regression failure.

2022-01-11 Daniel Drotos <drdani@mazsola.iit.uni-miskolc.hu>

    * sdcc/support/regression/ports/mcs51-common/spec.mk:
      Generate debug info when compile regtest of mcs51 ports.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix bug #3304.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix bug1115321 regression failure.

2022-01-11 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix gcc-torture-execute-pr34456 regression failure.

2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/ralloc.c,
      sdcc/src/hc08/ralloc.c:
      Remove more dead code.

2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/valdiag/tests/bug-2798.c:
      Exclude test for mos6502 port (no support for __sfr).

2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix several compiler warnings.

2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/ralloc.c:
      Remove oldralloc dead code.

2022-01-09 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,